# GoIT_Team-5

./: .gitignore  LICENSE  README.md  base_cls.py  command_handler.py  main.py  sort.py
virtual_assistant/: README.md  pyproject.toml  setup.py
virtual_assistant/virtual_assistant/: main.py
virtual_assistant/your_package_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
