[tool.poetry]
name = "virtual-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
virtual_assistant = "virtual_assistant.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
